package com.programacaoiii.assistencia_tecnica.modelos.enums;

public enum TipoPeca {
	PROCESSADOR,
	MEMORIA_RAM,
	PLACA_MAE,
	TELA,
	BATERIA
}
